# anchor

./: Cargo.toml
cli/src/: lib.rs
localnet/: Cargo.toml
localnet/src/: lib.rs  localnet_account.rs  test_validator.rs
spl/src/: token.rs
tests/localnet_cli/: Cargo.toml  build_localnet.sh
tests/localnet_cli/localnet/: Cargo.toml
tests/localnet_cli/localnet/src/: main.rs  suite_one.rs  suite_two.rs
tests/localnet_cli/programs/test-program/: Cargo.toml
tests/localnet_cli/tests/suite-1/: mint.json  test_user_token_act.json
tests/localnet_cli/tests/suite-2/: mint.json  test_user_token_act.json  usdc_mint.json
