[package]
name = "anchor-localnet"
version = "0.26.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = { path = "../client" }
anchor-cli = { path = "../cli" }
anchor-syn = { path = "../lang/syn" }
anchor-lang = { path = "../lang" }
spl-token = "3.5.0"
solana-sdk = "1.14.11"
flate2 = "1.0.24"
shellexpand = "2.1.0"
portpicker = "0.1.1"
solana-faucet = "1.14.7"
solana-program = "1.14.7"
solana-account-decoder = "1.14.7"
Inflector = "0.11.4"
anyhow = "1.0.66"
serde_json = "1.0.81"
serde = "1.0.140"
toml = "0.5.9"
clap = { version = "4.0.26", features = ["derive"] }
