[package]
name = "test-localnet"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "localnet"
path = "src/main.rs"

[dependencies]
anchor-localnet = { path = "../../../localnet" }
anchor-spl = { path = "../../../spl" }
clap = "4.0.26"
solana-sdk = "1.14.1"
solana-client = "1.14.1"
anyhow = "1.0.66"
spl-token = "3.5.0"
